# edge-trader-server-pro

./: .gitignore  BYBIT_INTEGRATION.md  CMakeLists.txt  CMakeLists.txt.backup_1762880746  CMakeLists.txt.backup_before_fix  CODING_TASK.md  COMPLETE_IMPLEMENTATION_REPORT.md  DEPLOYMENT.md  FINAL_STATUS.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_REPORT.md  LICENSE  MODEL_QUALITY_REPORT.md  MULTI_USER_ARCHITECTURE.md  PHASE2_COMPLETE.md  PRODUCTION_CERTIFICATE.md  PRODUCTION_README.md  PRODUCTION_READY.md  README.md  SYSTEM_AUDIT.md  audit_pro_cv_full.sh  backfill_bybit.sh  infer_logic_dump.cpp  infer_stack_dump.cpp  snapshot_pre_audit.sh  trade_history.json
audits/: api_routes.txt  clang_tidy.txt  cppcheck.xml  ctest.txt  http_routes_and_501.txt  journal_tail.txt  ldd_deps.txt  summary.txt  symbols_defined.txt  todos_and_stubs.txt  tooling_versions.txt
docs/: next_stage_v11.md  ppo_pro_plus_env_v1.md
docs/benchmarks/: 20251101-073609Z-btc15-final-benchmark.json
include/: symbol_alias.h
routes/: pipeline.cpp
scripts/: agent_report.sh  api_pipeline_prepare_train.sh  audit_prox_v1.sh  audit_signals.sh  audit_train_end_to_end.sh  auto_retrain.sh  check_norm_infer.sh  clean_from_raw.sh  debug_train_json.sh  env_eval.sh  env_grid.sh  env_sweep.sh  fetch_15m_and_agg.sh  fetch_archive.sh  fetch_bybit_csv.sh  fetch_bybit_rest.sh  fill_gaps_bybit_15m.sh  guard_no_applypatch.sh  guard_routes.sh  make_clean.sh  plan_fix.sh  preflight.sh  preflight_agents_metrics.sh  preflight_health.sh  qa_eval.sh  run_winrate_grid.sh  smoke.sh  smoke_all.sh  smoke_trade_ready.sh  svc_reset.sh  test_agents.sh  train_full.sh  train_once.sh
src/: ....  auto_backfill.h  context_detector.cpp  fetch.h  http_helpers.h  http_reply.h  infer_cache.h  infer_policy.cpp  infer_policy.h  main.cpp  main.cpp.backup_1762881413  metrics.cpp  metrics.h  model_lifecycle.h  ppo.cpp  ppo.h  ppo_pro.cpp  ppo_pro.cpp.before_fix  ppo_pro.h  ppo_rl.cpp  ppo_rl.cpp.backup  ppo_rl.h  rewardv2.cpp  rewardv2.h  rewardv2_accessors.cpp  rewardv2_accessors.h  rt_metrics.cpp  rt_metrics.h  server_accessors.cpp  server_accessors.h  trading_env.cpp  trading_env.h  train_logic.cpp  train_logic.cpp.backup  train_logic.h  utils.h  utils_data.cpp  utils_data.h  utils_model.h
src.backup.20251107_163931/: agents.h  agents_pub.h  context_detector.h  http_reply.h  infer_policy.h  money_flow.cpp  money_flow.h  rt_metrics.cpp  rt_metrics.h  server_accessors.h  server_utils.h  train_logic.h  utils_data.h  utils_model.h  validation.h
src.backup.20251107_163931/agents/: agent_base.h  agent_breakout.cpp  agent_correction.cpp  agent_layer.h  agent_short.cpp  agents_factory.h
src.backup.20251107_163931/env/: episode_runner.h  reward_live.cpp  reward_live.h
src.backup.20251107_163931/features/: features.h  manip_detector.h  money_flow.cpp
src.backup.20251107_163931/optim/: adam.h
src.backup.20251107_163931/robot/: bybit_helpers.cpp  signal_adapter.cpp
src.backup.20251107_163931/routes/: agents.h  backfill.cpp  backfill.inc.cpp  diagnostic.cpp  health.inc.cpp.disabled  health_ai.cpp  infer.cpp  infer.inc.cpp  metrics.cpp  model.inc.cpp  model_set.cpp  pipeline.cpp  robot.cpp  symbol.cpp  symbol.h  symbol_prepare.cpp  train.h  version_status.cpp
src/agents/: agent_breakout.cpp  agent_correction.cpp  agent_flat.cpp  agent_layer.cpp  agent_long.cpp  agent_short.cpp
src/env/: env_trading.cpp  env_trading.h  episode_runner.cpp  episode_runner.h  reward_live.cpp  reward_live.h
src/features/: features.cpp  features.cpp.backup  manip_detector.cpp  (+3 more)
tests/: test_utils.cpp
tools/: audit.sh
(+70 files in other folders)
